# SIDKick-pico

./: AGENTS.md
.github/workflows/: build-test-2350CR.yml
Source/: CMakeLists.txt  SKpico.c  emulator_tracing.h  reSIDWrapper.cc
Source/reSID16/: filter.cc
tests/: gyruss1.csv  package-lock.json  package.json  run_tests.sh  test_runner.js
